# LASM-obsolete

./: .gitmodules  CMakeLists.txt  README.md
src/: lasm.h  lasm_commons.h
src/Advection/: AdvectionManager.cpp  AdvectionManager.h  MeshAdaptor.cpp  MeshAdaptor.h
src/Advection/ModelAdaptor/: GamilAdaptor.cpp  lasm.F90
src/Advection/TestCase/: AdvectionTestCase.cpp  AdvectionTestCase.h  BarotropicTestCase.cpp  BarotropicTestCase.h  CartesianRotationTestCase.cpp  CartesianRotationTestCase.h  DeformationTestCase.cpp  DeformationTestCase.h  SolidRotationTestCase.cpp  SolidRotationTestCase.h  TerminatorChemistryTestCase.cpp  TerminatorChemistryTestCase.h
src/Advection/Tracer/: Tracer.cpp  Tracer.h  TracerManager.cpp  TracerManager.h  TracerMeshCell.cpp  TracerMeshCell.h  TracerSkeleton.cpp  TracerSkeleton.h  TracerSpeciesInfo.cpp  TracerSpeciesInfo.h
src/Advection/demo/: demo_dpcouple.cpp  demo_testcase.cpp  ic.barotropic.case2.nc  testcase.config
src/Parcel/: Parcel.cpp  Parcel.h  ShapeFunction.cpp  ShapeFunction.h
tools/: calc_errors.ncl  plot_barotropic.ncl  plot_cell.ncl  plot_correlation.ncl  plot_filament.ncl  plot_merge_parcel.ncl  plot_some_tracers.ncl  plot_split_parcel.ncl  plot_tracer.ncl  plot_tracer_dump.ncl
